// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ToolHeader > matches snapshot with custom className 1`] = `
<div
  class="flex w-full items-center justify-between gap-4 p-3 cursor-pointer custom-class"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wrench size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
      />
    </svg>
    <span
      class="font-medium text-sm"
    >
      Test Tool
    </span>
  </div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Pending
  </span>
</div>
`;

exports[`ToolHeader > matches snapshot with input-available state 1`] = `
<div
  class="flex w-full items-center justify-between gap-4 p-3 cursor-pointer"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wrench size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
      />
    </svg>
    <span
      class="font-medium text-sm"
    >
      Test Tool
    </span>
  </div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-clock size-4 animate-pulse"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 6v6l4 2"
      />
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Running
  </span>
</div>
`;

exports[`ToolHeader > matches snapshot with input-streaming state 1`] = `
<div
  class="flex w-full items-center justify-between gap-4 p-3 cursor-pointer"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wrench size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
      />
    </svg>
    <span
      class="font-medium text-sm"
    >
      Test Tool
    </span>
  </div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
    </svg>
    Pending
  </span>
</div>
`;

exports[`ToolHeader > matches snapshot with output-available state 1`] = `
<div
  class="flex w-full items-center justify-between gap-4 p-3 cursor-pointer"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wrench size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
      />
    </svg>
    <span
      class="font-medium text-sm"
    >
      Test Tool
    </span>
  </div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-check-big size-4 text-green-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.801 10A10 10 0 1 1 17 3.335"
      />
      <path
        d="m9 11 3 3L22 4"
      />
    </svg>
    Completed
  </span>
</div>
`;

exports[`ToolHeader > matches snapshot with output-error state 1`] = `
<div
  class="flex w-full items-center justify-between gap-4 p-3 cursor-pointer"
>
  <div
    class="flex items-center gap-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-wrench size-4 text-muted-foreground"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.106-3.105c.32-.322.863-.22.983.218a6 6 0 0 1-8.259 7.057l-7.91 7.91a1 1 0 0 1-2.999-3l7.91-7.91a6 6 0 0 1 7.057-8.259c.438.12.54.662.219.984z"
      />
    </svg>
    <span
      class="font-medium text-sm"
    >
      Test Tool
    </span>
  </div>
  <span
    class="badge gap-1 rounded-full text-xs"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-x size-4 text-red-600"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="m15 9-6 6"
      />
      <path
        d="m9 9 6 6"
      />
    </svg>
    Error
  </span>
</div>
`;
